{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 83,
  "lineage": "ba1a3003-5edb-ef49-c7f5-37fc51886278",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02293f3256057de4b",
            "association_id": "eipassoc-02276b2d846adab82",
            "domain": "vpc",
            "id": "eipalloc-02293f3256057de4b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0f4f93d6dc8898aab",
            "private_dns": "ip-10-0-1-4.us-west-2.compute.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-34-210-15-14.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.15.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "nat-eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "nat-eip",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0223246728818f162",
            "arn": "arn:aws:ec2:us-west-2:238277034186:instance/i-0fee4c0e89a9993be",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fee4c0e89a9993be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c26cd0b3c12698a1",
            "private_dns": "ip-10-0-2-169.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0267128a5960ef707",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0853567c91a4a04b5",
            "tags": {
              "Environment": "prod",
              "Name": "backend-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "backend-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc9782b72e9206a8"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.frontend",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0223246728818f162",
            "arn": "arn:aws:ec2:us-west-2:238277034186:instance/i-0aa17df11f6c3b3d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa17df11f6c3b3d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0572abca472cd527d",
            "private_dns": "ip-10-0-1-134.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.134",
            "public_ip": "54.68.173.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-080f5375f878157d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09994cbc0cc7a2279",
            "tags": {
              "Environment": "prod",
              "Name": "bastion-host",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "bastion-host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ced1d2f0b45e0b2"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0223246728818f162",
            "arn": "arn:aws:ec2:us-west-2:238277034186:instance/i-01acd6dca10656840",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01acd6dca10656840",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073a788e10056ae62",
            "private_dns": "ip-10-0-2-167.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-070b8bae5f2692acd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0853567c91a4a04b5",
            "tags": {
              "Environment": "prod",
              "Name": "db-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "db-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f8b61fbb77abc33"
            ]
          },
          "dependencies": [
            "aws_instance.backend",
            "aws_instance.bastion",
            "aws_instance.frontend",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0223246728818f162",
            "arn": "arn:aws:ec2:us-west-2:238277034186:instance/i-024e1138a8cf4a161",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024e1138a8cf4a161",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a77474f977786f21",
            "private_dns": "ip-10-0-2-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062e2b7bbe0061ed2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0853567c91a4a04b5",
            "tags": {
              "Environment": "prod",
              "Name": "frontend-instance",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "frontend-instance",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c239e08f8cc9cfa1"
            ]
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:internet-gateway/igw-0be6147756f0105d9",
            "id": "igw-0be6147756f0105d9",
            "owner_id": "238277034186",
            "tags": {
              "Environment": "prod",
              "Name": "prod-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prod_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:loadbalancer/app/main-lb/dd3ce28c9e584fb6",
            "arn_suffix": "app/main-lb/dd3ce28c9e584fb6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-lb-1429053187.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:238277034186:loadbalancer/app/main-lb/dd3ce28c9e584fb6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c831cb2b5eef0ef6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08d902448b246c1ee"
              },
              {
                "subnet_id": "subnet-09994cbc0cc7a2279"
              }
            ],
            "subnets": [
              "subnet-08d902448b246c1ee",
              "subnet-09994cbc0cc7a2279"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "main-lb",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "main-lb",
              "Terraform": "true"
            },
            "vpc_id": "vpc-001ac8a8e8b9718a3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.prod_subnet_1",
            "aws_subnet.prod_subnet_2",
            "aws_vpc.prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:listener/app/main-lb/dd3ce28c9e584fb6/3c05806f8f7eb4f2",
            "certificate_arn": "arn:aws:acm:us-west-2:238277034186:certificate/3d74cf3f-589d-44fb-8219-31a00c8a9ee8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:targetgroup/frontend-target-group/29ecdb900f813a0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:238277034186:listener/app/main-lb/dd3ce28c9e584fb6/3c05806f8f7eb4f2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:loadbalancer/app/main-lb/dd3ce28c9e584fb6",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.prod_certificate",
            "aws_lb.prod_lb",
            "aws_lb_target_group.frontend",
            "aws_security_group.lb_sg",
            "aws_subnet.prod_subnet_1",
            "aws_subnet.prod_subnet_2",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:listener/app/main-lb/dd3ce28c9e584fb6/f98ebf98b2cbdb55",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:238277034186:listener/app/main-lb/dd3ce28c9e584fb6/f98ebf98b2cbdb55",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:loadbalancer/app/main-lb/dd3ce28c9e584fb6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.prod_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.prod_subnet_1",
            "aws_subnet.prod_subnet_2",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:targetgroup/frontend-target-group/29ecdb900f813a0b",
            "arn_suffix": "targetgroup/frontend-target-group/29ecdb900f813a0b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:238277034186:targetgroup/frontend-target-group/29ecdb900f813a0b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:238277034186:targetgroup/frontend-target-group/29ecdb900f813a0b-20230329023028597200000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:238277034186:targetgroup/frontend-target-group/29ecdb900f813a0b",
            "target_id": "i-024e1138a8cf4a161"
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.frontend",
            "aws_lb_target_group.frontend",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02293f3256057de4b",
            "connectivity_type": "public",
            "id": "nat-0261fbeb0744d9383",
            "network_interface_id": "eni-0f4f93d6dc8898aab",
            "private_ip": "10.0.1.4",
            "public_ip": "34.210.15.14",
            "subnet_id": "subnet-09994cbc0cc7a2279",
            "tags": {
              "Environment": "prod",
              "Name": "nat-gw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "nat-gw",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:route-table/rtb-0494b4aeeff5fb975",
            "id": "rtb-0494b4aeeff5fb975",
            "owner_id": "238277034186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0261fbeb0744d9383",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "private-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:route-table/rtb-045f79b9b313dc3e6",
            "id": "rtb-045f79b9b313dc3e6",
            "owner_id": "238277034186",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be6147756f0105d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-route-table",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e15f7374e801ef88",
            "route_table_id": "rtb-0494b4aeeff5fb975",
            "subnet_id": "subnet-0853567c91a4a04b5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_route_table",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f52d4095201dfc4",
            "route_table_id": "rtb-045f79b9b313dc3e6",
            "subnet_id": "subnet-09994cbc0cc7a2279"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_route_table",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06498bcaa87732e9d",
            "route_table_id": "rtb-045f79b9b313dc3e6",
            "subnet_id": "subnet-08d902448b246c1ee"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_route_table",
            "aws_subnet.prod_subnet_2",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:security-group/sg-0fc9782b72e9206a8",
            "description": "Allow traffic from the bastion and frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc9782b72e9206a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.134/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.10/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "backend_sg",
            "name_prefix": "",
            "owner_id": "238277034186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "backend_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "backend_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion",
            "aws_instance.frontend",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:security-group/sg-03ced1d2f0b45e0b2",
            "description": "Allow SSH access to the bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ced1d2f0b45e0b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "122.147.7.201/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "238277034186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "bastion_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "bastion_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:security-group/sg-08f8b61fbb77abc33",
            "description": "Allow traffic from the bastion and backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f8b61fbb77abc33",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.134/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.169/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "db_sg",
            "name_prefix": "",
            "owner_id": "238277034186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "db_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "db_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.backend",
            "aws_instance.bastion",
            "aws_instance.frontend",
            "aws_security_group.backend_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.frontend_sg",
            "aws_subnet.prod_private_subnet",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:security-group/sg-0c239e08f8cc9cfa1",
            "description": "Allow web traffic for all and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c239e08f8cc9cfa1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.134/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend_sg",
            "name_prefix": "",
            "owner_id": "238277034186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "frontend_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "frontend_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.prod_subnet_1",
            "aws_vpc.prod_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:security-group/sg-0c831cb2b5eef0ef6",
            "description": "Allow HTTP and HTTPS traffic to the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c831cb2b5eef0ef6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "238277034186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "lb_sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "lb_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:subnet/subnet-0853567c91a4a04b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0853567c91a4a04b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238277034186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:subnet/subnet-09994cbc0cc7a2279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09994cbc0cc7a2279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238277034186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-subnet-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-subnet-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:subnet/subnet-08d902448b246c1ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d902448b246c1ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238277034186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-subnet-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-subnet-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-001ac8a8e8b9718a3"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238277034186:vpc/vpc-001ac8a8e8b9718a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056940df044b75395",
            "default_route_table_id": "rtb-020b10d241996114a",
            "default_security_group_id": "sg-0ce1fff54d4bb1307",
            "dhcp_options_id": "dopt-08bd342915677a95a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001ac8a8e8b9718a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020b10d241996114a",
            "owner_id": "238277034186",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}